[CONJ-897] Include connection id in certain important log messages